--- a/chekboxes/checkbox design/index.html
+++ b/chekboxes/checkbox design/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+	<label ><input type="text" value="salam"><span></span><i class="indicator"></i></label>
 	<label>
 		<input type="checkbox">
 		<span></span>
